<resources>
    <string name="app_name">NetworkApplication</string>
    <string name="http_connect">http connect</string>
    <string name="https_connect_ignore_cert_check">https connect ignore cert check</string>
    <string name="https_connect_system_cert_check">https connect system cert check</string>
    <string name="pins_url">pins url</string>
    <string name="get_pins">get pins</string>
    <string name="ssl_pinning_code_or_file_check">ssl pinning code or file check</string>
    <string name="ssl_pinning_code_xml_or_file_xml_check">ssl pinning code xml or file xml check</string>
    <string name="https_two_way_check">https two way check</string>
    <string name="no_proxy">no proxy</string>
    <string name="access_result">access result</string>
    <string name="webview_ignore_cert_check">webview ignore cert check</string>
    <string name="webview_system_cert_check">webview system cert check</string>
    <string name="webview_ssl_pinning">webview ssl pinning</string>
</resources>