<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_http_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/http_connect" />

            <Button
                android:id="@+id/btn_https_connect_ignore_cert_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_connect_ignore_cert_check" />

            <Button
                android:id="@+id/btn_https_connect_system_cert_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_connect_system_cert_check" />

            <EditText
                android:id="@+id/et_pins_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="url"
                android:hint="@string/pins_url"
                android:inputType="textUri"
                android:text="https://www.baidu.com/"
                android:textAlignment="center"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_get_pins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_pins" />

            <Button
                android:id="@+id/btn_ssl_pinning_code_or_file_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl_pinning_code_or_file_check" />

            <Button
                android:id="@+id/btn_ssl_pinning_code_xml_or_file_xml_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl_pinning_code_xml_or_file_xml_check" />

            <Button
                android:id="@+id/btn_https_two_way_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_two_way_check" />


            <Switch
                android:id="@+id/sw_no_proxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_proxy"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/tv_access_result"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:text="@string/access_result"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_webview_ignore_cert_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webview_ignore_cert_check" />

            <Button
                android:id="@+id/btn_webview_system_cert_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webview_system_cert_check" />

            <Button
                android:id="@+id/btn_webview_ssl_pinning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webview_ssl_pinning" />

            <WebView
                android:id="@+id/wv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:ignore="WebViewLayout" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>